Change how inputs are stored; more GraphVertex cleanup